--- a/package.json
+++ b/package.json
@@ -50,9 +50,12 @@
   },
   "dependencies": {
     "dotenv": "^2.0.0",
+    "material-ui": "^1.0.0-beta.37",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rmwc": "^1.2.1",
+    "truffle": "^4.1.3",
     "web3-utils": "^1.0.0-beta.30"
   },
   "scripts": {
