--- a/package.json
+++ b/package.json
@@ -52,8 +52,11 @@
     "dotenv": "^2.0.0",
     "material-ui": "^1.0.0-beta.37",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.21.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-moment": "^0.7.0",
+    "react-router-dom": "^4.2.2",
     "rmwc": "^1.2.1",
     "truffle": "^4.1.3",
     "web3-utils": "^1.0.0-beta.30"
