--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "whatwg-fetch": "1.0.0"
   },
   "dependencies": {
+    "@trust/webcrypto": "^0.9.0",
     "dotenv": "^2.0.0",
+    "elliptic": "6.4.0",
     "fbemitter": "^2.1.1",
     "js-cookie": "^2.2.0",
     "material-ui": "^1.0.0-beta.38",
@@ -60,7 +62,9 @@
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "rmwc": "^1.2.1",
-    "truffle": "^4.1.3",
+    "sjcl": "1.0.7",
+    "solc": "^0.4.22",
+    "truffle": "^4.1.6",
     "web3-utils": "^1.0.0-beta.30"
   },
   "scripts": {
