--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "sjcl": "1.0.7",
     "solc": "^0.4.22",
     "truffle": "^4.1.6",
+    "web3": "^1.0.0-beta.34",
     "web3-utils": "^1.0.0-beta.30"
   },
   "scripts": {
