--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "solc": "^0.4.22",
     "solidity-sha3": "^0.4.1",
     "truffle": "^4.1.6",
-    "web3": "^1.0.0-beta.34",
-    "web3-utils": "^1.0.0-beta.34"
+    "web3-utils": "^1.0.0-beta.30",
+    "web3": "0.20.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
