--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "@trust/webcrypto": "^0.9.0",
     "dotenv": "^2.0.0",
     "elliptic": "6.4.0",
+    "eth-crypto": "^1.1.0",
     "eth-signer": "^0.3.4",
     "ethereumjs-abi": "^0.6.5",
+    "ethers": "^3.0.15",
     "fbemitter": "^2.1.1",
     "js-cookie": "^2.2.0",
     "material-ui": "^1.0.0-beta.38",
