--- a/package.json
+++ b/package.json
@@ -2,24 +2,13 @@
   "name": "enigma-contracts",
   "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "truffle-contract": "^1.1.8",
-    "truffle-solidity-loader": "0.0.8"
-  },
   "dependencies": {
-    "@trust/webcrypto": "^0.9.0",
-    "dotenv": "^2.0.0",
+    "darq-truffle": "^4.1.9-latest.0",
     "elliptic": "6.4.0",
-    "eth-crypto": "^1.1.0",
-    "eth-signer": "^0.3.4",
     "ethereumjs-abi": "^0.6.5",
     "left-pad": "^1.3.0",
-    "sjcl": "1.0.7",
-    "solc": "^0.4.22",
     "solidity-sha3": "^0.4.1",
-    "truffle": "^4.1.6",
-    "web3": "0.20.6",
-    "web3-utils": "^1.0.0-beta.30"
+    "web3-utils": "1.0.0-beta.34"
   },
   "scripts": {
     "test": "node scripts/test.js --env=jsdom"
