--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "elliptic": "6.4.0",
     "ethereumjs-abi": "^0.6.5",
+    "node-forge": "^0.7.5",
     "solidity-sha3": "^0.4.1",
     "web3-utils": "1.0.0-beta.34"
   },
