--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
-  "name": "enigma-contracts",
+  "name": "enigma-contract",
   "version": "0.0.1",
-  "private": true,
-  "dependencies": {
+  "description": "The Solidity contracts of the Enigma Protocol with a Truffle test bed.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/enigmampc/enigma-contract.git"
+  },
+  "keywords": [],
+  "author": "Enigma",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/enigmampc/enigma-contract/issues"
+  },
+  "homepage": "https://enigma.co",
+  "dependencies": {},
+  "devDependencies": {
     "elliptic": "6.4.0",
     "ethereumjs-abi": "^0.6.5",
     "node-forge": "^0.7.5",
-    "solidity-sha3": "^0.4.1",
-    "web3-utils": "1.0.0-beta.34"
-  },
-  "scripts": {
-    "test": "node scripts/test.js --env=jsdom"
+    "web3-utils": "1.0.0-beta.34",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
   }
 }
