--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 
 install:
   - npm install
-  - npm install ganache-cli truffle
+  - npm install ganache-cli truffle darq-truffle@next
 
 before_script:
   - ganache-cli &
@@ -15,8 +15,8 @@ before_script:
 
 script:
   - rm -rf build
-  - truffle compile
-  - truffle migrate --reset --network ganache
-  - truffle test --network ganache
+  - darq-truffle compile
+  - darq-truffle migrate --reset --network ganache
+  - darq-truffle test --network ganache
 
 
