--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "url": "https://github.com/enigmampc/enigma-contract/issues"
   },
   "homepage": "https://enigma.co",
-  "dependencies": {},
+  "dependencies": {
+    "eth-crypto": "^1.2.2"
+  },
   "devDependencies": {
     "elliptic": "6.4.0",
     "ethereumjs-abi": "^0.6.5",
