MAINT: added web3+truffle-contract as devDependencies

--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "url": "https://github.com/enigmampc/enigma-contract/issues"
   },
   "homepage": "https://enigma.co",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "elliptic": "6.4.0",
-    "ethereumjs-abi": "^0.6.5",
-    "node-forge": "^0.7.5",
-    "web3-utils": "1.0.0-beta.34",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
-    "eth-crypto": "^1.2.2"
+    "elliptic": "6.4.0",
+    "eth-crypto": "^1.2.2",
+    "ethereumjs-abi": "^0.6.5",
+    "node-forge": "^0.7.5",
+    "truffle-contract": "^3.0.6",
+    "web3": "^1.0.0-beta.34",
+    "web3-utils": "1.0.0-beta.34"
   }
 }
