--- a/integration/package.json
+++ b/integration/package.json
@@ -21,6 +21,8 @@
     "eth-crypto": "^1.2.2",
     "ethereumjs-abi": "^0.6.5",
     "node-forge": "^0.7.5",
+    "npm": "^6.1.0",
+    "rlp": "2.1.0",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.34",
     "web3-utils": "1.0.0-beta.34"
