--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-forge": "^0.7.5",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.34",
-    "web3-utils": "1.0.0-beta.34"
+    "web3-utils": "1.0.0-beta.34",
+    "rlp": "2.1.0"
   }
 }
