--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "url": "https://github.com/enigmampc/enigma-contract/issues"
   },
   "homepage": "https://enigma.co",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "buffer": "^5.1.0",
     "babel-polyfill": "^6.26.0",
