--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.34",
     "web3-utils": "1.0.0-beta.34",
-    "rlp": "2.1.0"
+    "rlp": "2.1.0",
+    "openzeppelin-solidity": "^1.11.0"
   }
 }
