--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "url": "https://github.com/enigmampc/enigma-contract/issues"
   },
   "homepage": "https://enigma.co",
-  "dependencies": {},
+  "dependencies": {
+    "bn.js": "^4.11.8"
+  },
   "devDependencies": {
     "buffer": "^5.1.0",
     "babel-polyfill": "^6.26.0",
