--- a/enigma-js/.eslintrc
+++ b/enigma-js/.eslintrc
@@ -22,14 +22,15 @@
   "parser": "babel-eslint",
 
   "plugins": [
-    
+
   ],
+
+  "extends":"google",
 
   "rules": {
     "block-scoped-var": 2,
     "brace-style": [2, "1tbs", { "allowSingleLine": true }],
     "camelcase": [2, { "properties": "always" }],
-    "comma-dangle": [2, "never"],
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
     "complexity": 0,
