--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -50,7 +50,8 @@
     "babel-preset-env": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
     "chai": "^4.1.2",
-    "eslint": "^5.0.1",
+    "eslint": "^5.4.0",
+    "eslint-config-google": "^0.9.1",
     "eslint-loader": "^2.0.0",
     "jsdom": "11.11.0",
     "jsdom-global": "3.0.2",
