--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -29,6 +29,9 @@
   },
   "homepage": "https://enigma.co",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "any-promise": "^1.3.0",
+    "bluebird": "^3.5.1",
     "buffer": "^5.1.0",
     "elliptic": "6.4.0",
     "eth-crypto": "^1.2.2",
@@ -37,8 +40,8 @@
     "openzeppelin-solidity": "^1.11.0",
     "rlp": "2.1.0",
     "truffle-contract": "^3.0.6",
-    "web3": "^1.0.0-beta.34",
-    "web3-utils": "1.0.0-beta.34"
+    "web3": "^1.0.0-beta.35",
+    "web3-utils": "1.0.0-beta.35"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
