--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -39,6 +39,7 @@
     "node-forge": "^0.7.6",
     "openzeppelin-solidity": "^1.11.0",
     "rlp": "2.1.0",
+    "source-map-support": "^0.5.9",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.35",
     "web3-utils": "1.0.0-beta.35"
