--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -31,20 +31,20 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "any-promise": "^1.3.0",
-    "bluebird": "^3.5.1",
     "buffer": "^5.1.0",
     "elliptic": "6.4.0",
     "eth-crypto": "^1.2.2",
     "ethereumjs-abi": "^0.6.5",
+    "eventemitter3": "^3.1.0",
     "node-forge": "^0.7.6",
     "openzeppelin-solidity": "^1.11.0",
     "rlp": "2.1.0",
     "source-map-support": "^0.5.9",
     "truffle-contract": "^3.0.6",
-    "web3": "^1.0.0-beta.35",
     "web3-utils": "1.0.0-beta.35"
   },
   "devDependencies": {
+    "web3": "^1.0.0-beta.35",
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
@@ -54,6 +54,7 @@
     "babel-preset-env": "^7.0.0-beta.3",
     "babel-register": "^7.0.0-beta.3",
     "chai": "^4.1.2",
+    "chai-events": "0.0.1",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "eslint-loader": "^2.0.0",
