--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -31,20 +31,29 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "any-promise": "^1.3.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
+    "connect": "^3.6.6",
     "elliptic": "6.4.0",
     "eth-crypto": "^1.2.2",
     "ethereumjs-abi": "^0.6.5",
     "eventemitter3": "^3.1.0",
+    "filereader": "^0.10.3",
+    "jayson": "^2.1.0",
+    "net": "^1.0.2",
+    "node-fetch": "^2.3.0",
     "node-forge": "^0.7.6",
     "openzeppelin-solidity": "^1.11.0",
     "rlp": "2.1.0",
     "source-map-support": "^0.5.9",
+    "tls": "0.0.1",
     "truffle-contract": "^3.0.6",
-    "web3-utils": "1.0.0-beta.35"
+    "uuid": "^3.3.2",
+    "web3-utils": "1.0.0-beta.35",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "web3": "^1.0.0-beta.35",
     "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.51",
     "@babel/preset-env": "^7.0.0-beta.51",
@@ -62,6 +71,7 @@
     "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
+    "web3": "^1.0.0-beta.35",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "yargs": "^10.0.3"
