--- a/enigma-js/.babelrc
+++ b/enigma-js/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["env"],
-  "plugins": ["babel-plugin-add-module-exports"]
+  "presets": ["@babel/preset-env"],
+  "plugins": [],
 }
