--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ node_js:
 
 install:
   - npm install
-  - npm install truffle darq-truffle@next
+  - npm install -g truffle darq-truffle@next
   - cd enigma-js && yarn install
 
 before_script:
