--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "bn.js": "^4.11.8"
   },
   "devDependencies": {
-    "buffer": "^5.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
+    "buffer": "^5.1.0",
     "elliptic": "6.4.0",
     "eth-crypto": "^1.2.2",
     "ethereumjs-abi": "^0.6.5",
     "node-forge": "^0.7.5",
+    "openzeppelin-solidity": "^1.11.0",
+    "rlp": "2.1.0",
     "truffle-contract": "^3.0.6",
     "web3": "^1.0.0-beta.34",
-    "web3-utils": "1.0.0-beta.34",
-    "rlp": "2.1.0",
-    "openzeppelin-solidity": "^1.11.0"
+    "web3-utils": "1.0.0-beta.34"
   }
 }
