--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -63,12 +63,14 @@
     "babel-loader": "^8.0.0-beta.4",
     "chai": "^4.1.2",
     "chai-events": "0.0.1",
+    "codecov": "^3.1.0",
     "eslint": "^5.4.0",
     "eslint-config-google": "^0.9.1",
     "eslint-loader": "^2.0.0",
     "jsdom": "11.11.0",
     "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
+    "nyc": "^13.1.0",
     "uglifyjs-webpack-plugin": "^1.2.7",
     "web3": "^1.0.0-beta.35",
     "webpack": "^4.12.2",
