--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -64,6 +64,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.0-beta.4",
+    "babel-polyfill": "^6.26.0",
     "chai": "^4.1.2",
     "chai-events": "0.0.1",
     "codecov": "^3.1.0",
