--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ node_js:
   - "10.14"
 
 install:
-  - npm install
-  - npm install -g ganache-cli truffle
+  - yarn install
+  - yarn global add ganache-cli truffle
   - pushd enigma-js && yarn install && popd
 
 before_script:
