--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -35,6 +35,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
+    "chai-as-promised": "^7.1.1",
     "connect": "^3.6.6",
     "elliptic": "6.4.0",
     "eth-crypto": "^1.2.2",
