--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
   - truffle migrate --reset --network development
   - pushd enigma-js && yarn build && popd
   - SGX_MODE=SW truffle migrate --reset --network development
-  - SGX_MODE=SW pushd enigma-js && yarn test && popd
+  - pushd enigma-js && SGX_MODE=SW yarn test && popd
 
 after_success:
   - pushd enigma-js && yarn report-coverage
