--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --env dev && webpack --env build && npm run test",
     "dev": "webpack --progress --colors --watch --env dev",
     "test": "jest",
+    "test:integration": "jest -c=test/integrationTests/jest.config.js",
     "test:watch": "jest --watch",
     "report-coverage": "codecov"
   },
@@ -92,6 +93,10 @@
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/index.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/test/integrationTests/"
     ]
   }
 }
