--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -46,7 +46,7 @@
     "net": "^1.0.2",
     "node-fetch": "^2.3.0",
     "node-forge": "^0.7.6",
-    "openzeppelin-solidity": "^2.0.0",
+    "openzeppelin-solidity": "2.1",
     "rlp": "2.1.0",
     "source-map-support": "^0.5.9",
     "tls": "0.0.1",
