--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -44,6 +44,7 @@
     "eventemitter3": "^3.1.0",
     "filereader": "^0.10.3",
     "jayson": "^2.1.0",
+    "jsbi": "^2.0.5",
     "net": "^1.0.2",
     "node-fetch": "^2.3.0",
     "node-forge": "^0.7.6",
