--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "any-promise": "^1.3.0",
-    "axios": "^0.18.0",
+    "axios": "0.18.1",
     "body-parser": "^1.18.3",
     "buffer": "^5.1.0",
     "connect": "^3.6.6",
@@ -82,7 +82,7 @@
     "mock-local-storage": "^1.1.7",
     "regenerator-runtime": "^0.13.1",
     "uglifyjs-webpack-plugin": "^1.2.7",
-    "web3": "^1.0.0-beta.37",
+    "web3": "1.0.0-beta.37",
     "webpack": "^4.12.2",
     "webpack-cli": "^3.0.8",
     "yargs": "^10.0.3"
