--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "openzeppelin-solidity": "2.1",
     "rlp": "2.1.0",
     "truffle-contract": "^4.0.0",
-    "web3": "^1.0.0-beta.37",
+    "web3": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
   }
 }
