--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - pushd enigma-js && SGX_MODE=SW yarn test && popd
 
 after_success:
-  - pushd enigma-js && yarn report-coverage
+  - pushd enigma-js && yarn report-coverage && popd
 
 deploy:
   provider: script
