MAINT: truffle ntw development->develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ before_script:
 script:
   - rm -rf build
   - truffle compile
-  - truffle migrate --reset --network development
+  - truffle migrate --reset --network develop
   - pushd enigma-js && yarn build && popd
-  - SGX_MODE=SW truffle migrate --reset --network development
+  - SGX_MODE=SW truffle migrate --reset --network develop
   - pushd enigma-js && SGX_MODE=SW yarn test && popd
   - git clone https://github.com/enigmampc/discovery-docker-network.git
   - if [[ $TRAVIS_BRANCH == "master" ]]; then export TAG=latest; else export TAG=develop; fi
