--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ script:
     sed -i "s/-vv/-v/" enigma-core/start_core.bash &&
     popd
   - pushd discovery-docker-network/enigma-contract && docker build --build-arg GIT_BRANCH_CONTRACT=$TRAVIS_BRANCH -t enigmampc/enigma_contract:$TAG --no-cache . && popd
-  - pushd discovery-docker-network && NODES=3 docker-compose -f docker-compose.yml -f docker-compose.test.yml up --scale core=$NODES --scale p2p=$NODES --exit-code-from client && popd
+  - pushd discovery-docker-network && export NODES=3 && docker-compose -f docker-compose.yml -f docker-compose.test.yml up --scale core=$NODES --scale p2p=$NODES --exit-code-from client && popd
 
 after_success:
   - pushd enigma-js && yarn report-coverage && popd
