MAINT: make the CI fail fast when an error is encountered

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ before_script:
   - sleep 5
 
 script:
+  - set -e
   - rm -rf build
   - truffle compile
   - truffle migrate --reset --network develop
