--- a/.drone.yml
+++ b/.drone.yml
@@ -15,6 +15,7 @@ steps:
     privileged: true
     commands:
       - ./scripts/checkSimulationContracts.bash
+      - apt-get update && apt-get install build-essential
       - yarn install
       - yarn global add truffle
       - cd enigma-js && yarn install && cd ..
