--- a/.drone.yml
+++ b/.drone.yml
@@ -101,3 +101,8 @@ steps:
       - if [[ ${DRONE_BRANCH} == "master" ]]; then export TAG=latest; else export TAG=develop; fi
       - docker build --build-arg GIT_BRANCH_CONTRACT=${DRONE_BRANCH} -t enigmampc/enigma_contract:$TAG --no-cache .
       - docker push enigmampc/enigma_contract:$TAG
+
+volumes:
+  - name: sock
+    host:
+      path: /var/run/docker.sock
