--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "homepage": "https://enigma.co",
   "dependencies": {
-    "bn.js": "^4.11.8"
+    "bn.js": "^4.11.8",
+    "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -23,17 +24,16 @@
     "@babel/register": "^7.5.5",
     "buffer": "^5.1.0",
     "core-js": "^3.1.4",
-    "dotenv": "^6.2.0",
+    "dotenv": "^8.2.0",
     "elliptic": "6.4.0",
-    "eth-crypto": "^1.2.2",
+    "eth-crypto": "^1.5.0",
     "ethereumjs-abi": "^0.6.5",
     "msgpack-lite": "^0.1.26",
     "node-forge": "^0.7.5",
-    "openzeppelin-solidity": "2.1",
+    "openzeppelin-solidity": "2.4",
     "regenerator-runtime": "^0.13.3",
     "rlp": "2.1.0",
-    "truffle-contract": "^4.0.0",
-    "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37"
+    "truffle-contract": "^4.0.31",
+    "web3": "1.0.0-beta.37"
   }
 }
