MAINT: upgraded more deps: babel-core and truffle/contract

--- a/enigma-js/package.json
+++ b/enigma-js/package.json
@@ -55,18 +55,17 @@
     "rlp": "^2.2.0",
     "source-map-support": "^0.5.9",
     "tls": "0.0.1",
-    "truffle-contract": "^4.0.31",
+    "@truffle/contract": "^4.1.0",
     "uuid": "^3.3.2",
     "web3-utils": "^1.2.4",
     "webpack-node-externals": "^1.7.2",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.0-beta.4",
@@ -77,8 +76,8 @@
     "eslint": "6.6.0",
     "eslint-config-google": "0.14.0",
     "eslint-loader": "3.0.2",
-    "jest": "^24.8.0",
-    "jest-circus": "^24.8.0",
+    "jest": "^24.9.0",
+    "jest-circus": "^24.9.0",
     "jsdom": "^15.2.0",
     "jsdom-global": "3.0.2",
     "mock-local-storage": "^1.1.11",
